--- a/slides.html
+++ b/slides.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="framework/css/fonts.css" data-noprefix>
   <link rel="stylesheet" href="framework/css/highlightjs/github.css" data-noprefix>
   <link rel="stylesheet" href="framework/css/styles.css" data-noprefix>
+  <link rel="stylesheet" href="framework/css/a11y/plugin.css">
   <link rel="shortcut icon" href="framework/img/favicon.ico">
 
   <!-- Takes care of CSS3 prefixes -->
@@ -1072,6 +1073,7 @@ color: #222222;</textarea>
   <script src="framework/scripts/plugins/markdown/markdown.js"></script>
   <script src="framework/scripts/plugins/highlight/highlight-8.4.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
+  <script src="framework/scripts/plugins/a11y/plugin.js"></script>
   <script src="framework/scripts/llc.js"></script>
   <script>
     var slideshow = new SlideShow();
