Added label to text snippet input.

--- a/slides.html
+++ b/slides.html
@@ -584,7 +584,7 @@
     <section class="slide">
       <h1>Font Styles & Typography</h1>
       <p>Before we go back to the CSS file, let's experiment with a few CSS properties by changing some of the values below.</p>
-      <textarea class="snippet" data-subject="#typography-example">line-height: 1.25;
+      <textarea class="snippet" data-subject="#typography-example" aria-label="Edit code snippet">line-height: 1.25;
 font-family: Helvetica, Arial, sans-serif;
 font-size: 18px;
 font-weight: normal;
