revised timing in schedule

--- a/notes-en.html
+++ b/notes-en.html
@@ -29,19 +29,17 @@
 
       ##Ladies Learning Code: Intro to HTML & CSS Animations: Valentine's Day Edition
 
+      ##3 hours
+
       <br>
       #Schedule
 
       <strong> Important note:</strong>
       This is a guideline, not a rule! It is more important that the learners are following along then it is to get to the end of the slides!
 
-      * <strong>Getting Started (10:00 am - 11:00 am)</strong>: Preview of final project, setting up tools, workflow
-      * <strong>Intro to HTML (11:00 am - 12:30 pm)</strong>: What is HTML, tags, first exercise, Intro to CSS
-      * <strong>Lunch Break! (12:30 pm - 1:30 pm)</strong>
-      * <strong>CSS (1:30 pm -2:00 pm)</strong>: syntax and terminology, adding CSS, webfonts
-      * <strong>CSS Selectors (2:00 pm - 2:30 pm)</strong>: selectors, typography, unicodes, attributes, class selectors
-      * <strong>CSS animations (2:30 pm - 3:30 pm)</strong>: Keyframes, transform, pulsing heart exercise
-      * <strong>Wrapping up (3:30 pm - 4:00 pm)</strong>: Position and `nth-of-type`, class exercise, hackathon!
+      * <strong>Getting Started + Intro to HTML (1 hour)</strong>: Preview of final project, setting up tools, workflow, what is HTML, tags, first exercise
+      * <strong>Intro to CSS (1 hour)</strong>: syntax and terminology, adding CSS, webfonts, selectors, typography, unicodes, attributes, class selectors
+      * <strong>CSS animations (1 hour)</strong>: Keyframes, transform, pulsing heart exercise, position and `nth-of-type`, class exercise, hackathon!
 
 
       <br>
