--- a/notes-fr.html
+++ b/notes-fr.html
@@ -29,19 +29,17 @@
 
       ##Femmes en programmation : Intro au HTML et aux animations CSS (édition Saint-Valentin)
 
+      ##3 heures
+
       <br>
       #Ordre du jour
 
       <strong>Important :</strong>
       Ces notes ne sont que des suggestions. Vous n’avez pas besoin de les suivre à la lettre! Concentrez-vous davantage sur les besoins du groupe et la compréhension des notions. Tant que les personnes participant à l'atelier suivent bien, ce n'est pas un problème si vous ne faites pas toutes les diapositives.
 
-      * <strong>Premiers pas (10 h 00 - 11 h 00)</strong> : Aperçu du projet final, outils, dossiers
-      * <strong>Intro au HTML (11 h 00 - 12 h 30)</strong> : Qu'est-ce que le HTML, balises, premier exercice, intro au CSS
-      * <strong>Dîner (12 h 30 - 13 h 30)</strong>
-      * <strong>CSS (13 h 30 - 14 h 00)</strong> : syntaxe et terminologie, ajouter du CSS, polices Web
-      * <strong>Sélecteurs CSS (14 h 00 - 14 h 30)</strong> : sélecteurs, typographie, entités de caractère Unicode, attributs, sélecteurs de classe
-      * <strong>Animations CSS (14 h 30 - 15 h 30)</strong> : Keyframes, transform, cœur qui bat
-      * <strong>Conclusion (15 h 30 - 16 h 00)</strong> : position et `nth-of-type`, exercice de groupe, marathon de programmation
+      * <strong>Premiers pas (1 heure)</strong> : Aperçu du projet final, outils, dossiers, qu'est-ce que le HTML, balises, premier exercice
+      * <strong>Intro au CSS (1 heure)</strong> : syntaxe et terminologie, ajouter du CSS, polices Web, sélecteurs, typographie, entités de caractère Unicode, attributs, sélecteurs de classe
+      * <strong>Animations CSS (1 heure)</strong> : Keyframes, transform, cœur qui bat, position et `nth-of-type`, exercice de groupe, marathon de programmation
 
 
       <br>
