--- a/project/index.html
+++ b/project/index.html
@@ -3,18 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Ladies Learning Code Love Bomb!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <main>
+    <i class="fa fa-bomb"></i>
     <h2>A love bomb from</h2>
     <h1>Ladies Learning Code</h1>
-    <p>This goes out to all the volunteers, mentors, instructors and learners across the country. Thanks for making LLC so awesome! Happy Valentine's Day!</p>
-    
+    <p>This goes out to all the volunteers, mentors, instructors and learners across the country. Thanks for making LLC so awesome! Happy Valentine's Day!<span class="heart-pulse">&#9829;</span></p>
+
+    <span class="heart-falling">&#9829;</span>
+    <span class="heart-falling">&#9829;</span>
+    <span class="heart-falling">&#9829;</span>
+    <span class="heart-falling">&#9829;</span>
+    <span class="heart-falling">&#9829;</span>
+    <span class="heart-falling">&#9829;</span>
+
     <blockquote>
       <p>You know you're in love when you can't fall asleep because reality is finally better than your dreams.</p>
       <cite>― Dr. Seuss</cite>
     </blockquote>
+    <i class="fa fa-code"></i>
   </main>
 
 </body>
